fix z-index toastify

--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -208,6 +208,7 @@ $dark-hover-color: #505e77;
   z-index: 1200 !important;
 }
 
-.css-10xeiu1-MuiPaper-root-MuiAppBar-root {
+.css-10xeiu1-MuiPaper-root-MuiAppBar-root,
+.css-1jlgw5i {
   z-index: 10 !important;
 }
